kubernetes/api_sorteo_kubernetes/api-sorteo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicio-token-sorteo
spec:
  replicas: 1  # La réplica inicial mínima
  selector:
    matchLabels:
      app: servicio-token-sorteo
  template:
    metadata:
      labels:
        app: servicio-token-sorteo
    spec:
      containers:
        - name: servicio-token-sorteo
          image: lauml/dssd-java-api-ecocycle:1.0.0
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
