kubernetes/api_sorteo_kubernetes/psql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: java-sorteo-db
spec:
  serviceName: "java-sorteo-db"
  replicas: 1  # Mínimo de réplicas
  selector:
    matchLabels:
      app: java-sorteo-db
  template:
    metadata:
      labels:
        app: java-sorteo-db
    spec:
      containers:
        - name: java-sorteo-db
          image: postgres:16.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: java-sorteo-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: java-sorteo-db
spec:
  clusterIP: None
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: java-sorteo-db
